Remove overflow:hidden and position:fixed because they were breaking scrolling on other pages

--- a/style.css
+++ b/style.css
@@ -4,10 +4,8 @@ html, body {
   height: 100%;
   width: 100%;
   background: #000;
-  overflow: hidden;
   font-size: 16px;
-  font-family: "Roboto", sans-serif;
-  position: fixed; }
+  font-family: "Roboto", sans-serif; }
 
 .invisible {
   display: none !important; }
